spacing, footer and map scroll fix
- should probably do js api map in the future to prevent having to do
dumb hacks

--- a/_includes/css/base.css
+++ b/_includes/css/base.css
@@ -53,9 +53,8 @@
 ================================================== */
 	body {
 		background: #fff;
-		font: 18px/21px 'Karla', "HelveticaNeue", Arial, sans-serif;
+		font: 18px/21px "sofia-pro", "HelveticaNeue", Arial, sans-serif;
 		color: #444;
-		letter-spacing: -1.1px;
 		-webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
 		-webkit-text-size-adjust: 100%;
 		overflow-x: hidden;
